--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sócio Torcedor</title>
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="img/awxok-0ov74-001.ico" type="image/x-icon">
 </head>
 <body>
@@ -286,4 +286,4 @@
 
 <script src="js/javascript.js"></script>
 
-</html>
+</html>  
