--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <h1 class="font-s-sb cor-p1">Atendimento</h1>
 
           <ul>
-            <li class="font-s cor-c2"><span class="font-s cor-c1">Telefone:</span> (99) 99999-9999</li>
+            <li class="font-s cor-c2"><span class="font-s cor-c1">Telefone:</span> 99999999</li>
             <li class="font-s cor-c2"><span class="font-s cor-c1">Email:</span> socio@gmail.com</li>
             <li class="font-s cor-c2"><span class="font-s cor-c1">Endereço:</span> Av. Gonzaga - CE</li>
           </ul>
